--- a/files/style.css
+++ b/files/style.css
@@ -9,64 +9,35 @@ body {
   position: absolute;
   background-image: url("Ellipse 18.png");
   background-repeat: no-repeat;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .heading {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
-.logo {
+nav{
+  color:rgb(255, 255, 255);
+  flex: 1;
+  order: 2;
+  align-items: center;
   position: relative;
-  align-self: flex-start;
+  font-size: 35px;
+  left: 100px;
+  top: 10px;
+}
+
+.logo{
+  position: relative;
+  flex:1;
+  order: 1;
   color: #fff;
   font-weight: 600;
-  padding-top: 20px;
-  margin: 1px 20px;
-}
-
-.menu-box {
-  position: relative;
-  padding: 0 0;
-  margin: 0 30px;
-  display: flex;
-  align-self: flex-end;
-  width: 35px;
-  height: 20px;
-  cursor: pointer;
-  transition: all 0.4s ease-in-out;
-  border: 2px solid #1d2379;
-}
-
-.menu-bar {
-  width: 40px;
-  height: 3px;
-  position: absolute;
-  background: #fff;
-  border-radius: 5px;
-  box-shadow: 0 5px 10px, rgb(243, 246, 243);
-  transition: all 0.5s ease-in-out;
-}
-
-.menu-bar::before,
-.menu-bar::after {
-  content: '';
-  position: absolute;
-  width: 40px;
-  height: 3px;
-  background: #fff;
-  border-radius: 2px;
-  box-shadow: 0 1px 2.5px, green;
-  transition: all 0.5s ease-in-out;
-}
-
-.menu-bar::before {
-  transform: translateY(-16px);
-}
-
-.menu-bar::after {
-  transform: translateY(16px);
+  text-decoration: none;
+  left: 20px;
+  top: 10px;
 }
 
 .head-liner {
@@ -144,6 +115,10 @@ h1 {
   font-size: 13px;
 }
 
+li{
+  list-style: none;
+}
+
 span {
   position: relative;
   color: #7f89f3;
@@ -163,7 +138,23 @@ span {
   margin: 30px;
 }
 
-.icon {
+.github-icon {
+  margin: 0 8px;
+}
+
+.linkedIn--icon {
+  margin: 0 8px;
+}
+
+.peace-icon {
+  margin: 0 8px;
+}
+
+.twitter-icon {
+  margin: 0 8px;
+}
+
+.M-icon {
   margin: 0 8px;
 }
 
