--- a/files/style2.css
+++ b/files/style2.css
@@ -3,47 +3,25 @@
     padding: 0;
 }
 
-body {
-    background-color: rgb(3, 3, 104);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    position: relative;
-}
 
 .work {
     position: relative;
-    margin: 5% 0;
-    margin-left: 0%;
+    margin-top: 160%;
     background-image: url("Ellipse 19@2x.png");
     background-position: right;
 }
 
-.work-2 {
-    background-image: url("Ellipse 20@2x.png");
-    background-position: left;
-
-}
-
-.work-3 {
-    background-image: url("Ellipse 21@2x.png");
-    background-position: right;
-}
-
-.work-4 {
-    background-image: url("Ellipse 22@2x.png");
-    background-position: left;
-}
-
-.title.work {
-    display: flex;
-    flex-direction: column;
+.title-work {
+    color: #413cc6;
+    font-size: 150%;
     margin-left: 5%;
-    color: #4d4ab8
+    margin-bottom: 10%;
 }
 
 .line {
     position: relative;
-    background-color: rgb(82, 82, 82);
-    height: 2px;
+    background-color: rgb(44, 43, 43);
+    height: 1px;
     width: 90%;
     color:rgb(3, 3, 104);
     margin-left: 5%;
@@ -87,6 +65,7 @@ h3{
     color: rgb(3, 3, 104);
     background-color: rgb(84, 89, 87);
     width: .5%;
+    height: 15%;
     margin-left: 5%;
 }
 
@@ -190,15 +169,12 @@ h3{
     margin: 0 1px;
   }
   
-  .M-icon {
-    margin: 0 5px;
-  }
 
-  .my-mail {
+   .my-mail {
     color: white;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
+    margin-left:25%;
+    margin-right:25%;
+    margin-top: -23%;
+   }
 
  
