--- a/files/style.css
+++ b/files/style.css
@@ -1,56 +1,41 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 body {
-  background: #1d2379;
-  position: absolute;
-  background-image: url("Ellipse 18.png");
-  background-repeat: no-repeat;
+  display: grid;
+  background-color: rgb(29, 29, 115);
+}
+
+.main-page {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin-right: 0;
 }
 
-.heading {
+header {
+  padding: 20px;
   position: relative;
-  display: flex;
-  flex-direction: row;
-}
-
-nav {
-  color: rgb(255, 255, 255);
-  flex: 1;
-  order: 2;
-  align-items: center;
-  position: relative;
-  font-size: 35px;
-  left: 100px;
-  top: 10px;
+  display: grid;
 }
 
 .logo {
-  position: relative;
-  flex: 1;
-  order: 1;
+  grid-column:1 ;
+  color: aliceblue;
   color: #fff;
   font-weight: 600;
   text-decoration: none;
-  left: 20px;
-  top: 10px;
 }
 
-.head-liner {
-  display: flex;
-  flex-direction: column;
-  height: 500px;
-  width: 100%;
+nav {
+  grid-column: 2;
+  color: rgb(255, 255, 255);
+  margin-left: auto;
+  margin-right: 0;
 }
 
 h1 {
   color: #7f89f3;
   text-align: center;
-  margin-top: 90px;
   font-size: 30px;
 }
 
@@ -77,12 +62,13 @@ h1 {
   background-color: rgb(39, 42, 42);
   color: rgb(5, 8, 46);
   align-items: center;
-  left: 5%;
+  /* left: 5%; */
 }
+
 
 .languages-skills-frameworks {
   position: relative;
-  display: grid;
+  display: grid; 
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 30px;
   margin-top: 50px;
@@ -162,10 +148,13 @@ li {
   display: flex;
   align-self: center;
   color: rgb(163, 160, 234);
-  margin-left: -10%;
+}
+
+.icon{
+  padding-left: 38%;
 }
 
 .wor {
   text-align: center;
-  padding-left: 60%;
+  margin-left: 10%;
 }
