--- a/files/style.css
+++ b/files/style.css
@@ -62,7 +62,7 @@ h1 {
   background-color: rgb(39, 42, 42);
   color: rgb(5, 8, 46);
   align-items: center;
-  /* left: 5%; */
+   margin-left: 5%;
 }
 
 
