--- a/css-files/style.css
+++ b/css-files/style.css
@@ -2,10 +2,12 @@
   padding: 0;
   margin: 0;
 }
-
+ 
 body {
+  position: relative;
   display: grid;
   background-color: rgb(29, 29, 115);
+  margin: 0;
 }
 
 .main-page {
