updated the html and css file
I did the changes the reviewer told me to do because I mistakenly commited the initial file

--- a/css-files/style.css
+++ b/css-files/style.css
@@ -2,10 +2,13 @@
   padding: 0;
   margin: 0;
 }
-
+ 
 body {
+  position: relative;
   display: grid;
   background-color: rgb(29, 29, 115);
+  margin: 0;
+  padding: 5px;
 }
 
 .main-page {
