--- a/css-files/style3.css
+++ b/css-files/style3.css
@@ -1,10 +1,12 @@
 .contact {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   margin-top: 30px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+  
 .conta {
-  color: #4d4ab8;
+  color: #9390FF;
   text-align: center;
   margin-left: -5%;
   margin-top: 15%;
@@ -22,62 +24,52 @@
 form {
   display: flex;
   flex-direction: column;
-  margin-top: 5%;
-}
-
-.input-list * {
-  vertical-align: top;
-}
-
-label {
-  color: aliceblue;
-  margin-left: 5%;
+  padding: 5%;
 }
 
 #name {
-  width: 65%;
+  width: 90%;
   height: 30px;
   margin-left: 5%;
   margin-bottom: 5%;
 }
 
 #mail {
-  margin-left: 3.5%;
+  margin-left: 5%;
   margin-bottom: 5%;
-  width: 65%;
+  width: 90%;
   height: 30px;
 }
 
 #msg {
-  margin-left: 0.46%;
+  margin-left: 5%;
   margin-bottom: 5%;
-  width: 65%;
+  width: 90%;
 }
 
-#form-btn {
-  background-color: blueviolet;
-  width: 25%;
+#bttn {
+  background-color: #9390FF;
+  position: relative;
+  width: 100px;
   margin-top: 10%;
   border: none;
-  margin-left: 5%;
-  position: relative;
   font-size: 70%;
   height: 40px;
 }
 
+.button {
+  align-self: center;
+}
+
 .cont-line {
   position: relative;
-  background-color: rgb(82, 82, 82);
+  background-color: rgb(39, 42, 42);
   height: 2px;
   width: 100%;
-  color: rgb(3, 3, 104);
   margin-top: 15%;
 }
 
 .icons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   color: white;
   list-style: none;
 }
@@ -100,7 +92,6 @@ label {
 
 .my-mail {
   color: white;
-  margin-left: 30%;
-  margin-right: 25%;
-  margin-top: -20px;
+  text-align: center;
+  padding-bottom: 10px;
 }
