--- a/css-files/style3.css
+++ b/css-files/style3.css
@@ -1,13 +1,12 @@
 .contact {
   display: flex;
   flex-direction: column;
-  display: grid;
   margin-top: 30px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-  
+
 .conta {
-  color: #9390FF;
+  color: #9390ff;
   text-align: center;
   margin-left: -5%;
   margin-top: 15%;
@@ -49,17 +48,13 @@ form {
 }
 
 #bttn {
-  background-color: #9390FF;
+  background-color: #9390ff;
   position: relative;
+  margin-top: 10%;
   width: 100px;
-  margin-top: 10%;
-  border: none;
-  width: 25%;
-  margin-top: 10%;
-  border: none;
-  margin-left: 38%;
   font-size: 70%;
   height: 40px;
+  border-style: none;
 }
 
 .button {
@@ -76,9 +71,8 @@ form {
 
 .icons {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
+  color: #fff;
+  margin-left: 8%;
   list-style: none;
 }
 
