update the CSS file with animations
added some animations.

--- a/CSSfiles/Mstyle.css
+++ b/CSSfiles/Mstyle.css
@@ -65,6 +65,28 @@
     color: #7f89f3;
     text-align: center;
     font-size: 30px;
+    position: relative;
+    animation: joker 1s ease infinite alternate;
+  }
+  
+  @keyframes joker {
+    0%   {
+      background-color:#7f89f3; 
+      
+    }
+    25%  {
+      background-color:yellow; 
+    }
+    50%  {
+      background-color:blue; 
+      font-size: 50px;
+    }
+    75%  {
+      background-color:green; 
+    }
+    100% {
+      background-color:red; 
+    }
   }
 
   .title {
