--- a/CSSfiles/Dstyle.css
+++ b/CSSfiles/Dstyle.css
@@ -2,7 +2,7 @@
   body {
     position: relative;
     display: grid;
-    background-color: rgb(29, 29, 115);
+    background-color: #191765;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
@@ -95,7 +95,7 @@
     align-self: center;
     margin: 0 25%;
     height: 1.1px;
-    background-color: rgb(39, 42, 42);
+    background-color: #3a3837;
     color: rgb(5, 8, 46);
   }
 
@@ -256,7 +256,7 @@
 
   .line {
     position: relative;
-    background-color: rgb(39, 42, 42);
+    background-color: #3a3837;
     height: 1px;
     width: 90%;
     color: rgb(3, 3, 104);
@@ -314,6 +314,7 @@
 
   .btn {
     background-color: #9390ff;
+    color: #fff;
     width: 25%;
     margin-top: 1%;
     border: none;
@@ -353,7 +354,7 @@
   .vector {
     position: relative;
     color: rgb(3, 3, 104);
-    background-color: rgb(84, 89, 87);
+    background-color: #3a3837;
     width: 0.5%;
     height: 45px;
     margin: 0 2%;
@@ -410,11 +411,30 @@
     margin: 0 15%;
   }
 
+  ::placeholder {
+    color: #3a3837;
+    opacity: 1;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  :-ms-input-placeholder {
+    color: #3a3837;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  input:focus,
+  textarea:focus {
+    color: #191765;
+    font-size: 17px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
   #name-D {
     margin-left: 5%;
     margin-bottom: 5%;
     width: 90%;
     height: 40px;
+    font-size: 17px;
   }
 
   #mail-D {
@@ -422,29 +442,32 @@
     margin-bottom: 5%;
     width: 90%;
     height: 40px;
+    font-size: 17px;
   }
 
   #msg-D {
     margin-left: 5%;
     margin-bottom: 5%;
     width: 90%;
+    font-size: 17px;
   }
 
   #bttn-D {
     background-color: #9390ff;
+    color: #fff;
     position: relative;
     width: 25%;
     margin-top: 10%;
     border: none;
     margin-left: 38%;
-    font-size: 70%;
+    font-size: 90%;
     height: 40px;
   }
 
   .cont-line {
     grid-row: 4;
     position: relative;
-    background-color: rgb(39, 42, 42);
+    background-color: #3a3837;
     height: 2px;
     width: 100%;
     margin-top: 0;
