--- a/CSSfiles/main.css
+++ b/CSSfiles/main.css
@@ -41,9 +41,6 @@
     margin-left: auto;
     margin-right: 0;
   }
-  nav {
-    background-color: #cacac5;
-  }
   .hamburger {
     position: relative;
     display: block;
@@ -56,15 +53,28 @@
     outline: none;
     border: none;
   }
-  .hamburger .bar, .hamburger:after, .hamburger:before {
+  .hamburger .bar,
+  .hamburger::after,
+  .hamburger::before {
     content: '';
     display: block;
     width: 100%;
     height: 5px;
     background-color: white;
-    margin: 6px 0px;
+    margin: 6px 0;
     -webkit-transition: 0.4s;
     transition: 0.4s;
+  }
+  .hamburger.is-active::before {
+    -webkit-transform: rotate(-45deg) translate(-8px, 6px);
+            transform: rotate(-45deg) translate(-8px, 6px);
+  }
+  .hamburger.is-active::after {
+    -webkit-transform: rotate(45deg) translate(-9px, -8px);
+            transform: rotate(45deg) translate(-9px, -8px);
+  }
+  .hamburger.is-active .bar {
+    opacity: 0;
   }
   .pop-up {
     display: -ms-grid;
@@ -99,7 +109,6 @@
     grid-column: 2;
     margin-left: auto;
     margin-right: 0;
-    background-color: #cacac5;
   }
   .pop-up .pop-head .linkss {
     display: -webkit-box;
@@ -146,17 +155,6 @@
     background-position: right;
     background-size: contain;
     height: 1000%;
-  }
-  .hamburger.is-active:before {
-    -webkit-transform: rotate(-45deg) translate(-8px, 6px);
-            transform: rotate(-45deg) translate(-8px, 6px);
-  }
-  .hamburger.is-active:after {
-    -webkit-transform: rotate(45deg) translate(-9px, -8px);
-            transform: rotate(45deg) translate(-9px, -8px);
-  }
-  .hamburger.is-active .bar {
-    opacity: 0;
   }
   .D-nav {
     display: none;
@@ -205,9 +203,6 @@
         -ms-flex-pack: center;
             justify-content: center;
     left: 10%;
-    background-image: url();
-    background-repeat: no-repeat;
-    background-position: left;
   }
   .languages {
     -webkit-box-flex: 1;
@@ -424,21 +419,6 @@
     padding: 5%;
   }
   ::-webkit-input-placeholder {
-    color: #3a3837;
-    opacity: 1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  :-ms-input-placeholder {
-    color: #3a3837;
-    opacity: 1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  ::-ms-input-placeholder {
-    color: #3a3837;
-    opacity: 1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  ::placeholder {
     color: #3a3837;
     opacity: 1;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -965,21 +945,6 @@
     margin: 0 15%;
   }
   ::-webkit-input-placeholder {
-    color: #3a3837;
-    opacity: 1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  :-ms-input-placeholder {
-    color: #3a3837;
-    opacity: 1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  ::-ms-input-placeholder {
-    color: #3a3837;
-    opacity: 1;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  ::placeholder {
     color: #3a3837;
     opacity: 1;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
