--- a/CSSfiles/main.scss
+++ b/CSSfiles/main.scss
@@ -77,8 +77,7 @@
   }
 
   .pop-up {
-    // display: none;
-    display: grid;
+    display: none;
 
     .pop-head {
       grid-row: 1;
@@ -414,7 +413,7 @@
 
   ::-webkit-input-placeholder {
     color: #3a3837;
-    opacity: 1; 
+    opacity: 1;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
