--- a/CSSfiles/main.css
+++ b/CSSfiles/main.css
@@ -101,6 +101,8 @@
     background-repeat: no-repeat;
     background-position: left;
     background-size: contain;
+    height: 150%;
+    background-position-y: bottom;
   }
 
   .pop-up .pop-head .line-one {
@@ -173,7 +175,7 @@
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
-    height: 1000%;
+    height: 2000%;
   }
 
   .D-nav {
@@ -580,6 +582,10 @@
 
   .main-page {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .pop-up {
+    display: none;
   }
 
   .heading-Des {
