--- a/CSSfiles/main.scss
+++ b/CSSfiles/main.scss
@@ -87,6 +87,9 @@
       background-repeat: no-repeat;
       background-position: left;
       background-size: contain;
+      height: 150%;
+      background-position-y: bottom;
+
 
       .line-one {
         position: relative;
@@ -142,7 +145,7 @@
       background-repeat: no-repeat;
       background-position: right;
       background-size: contain;
-      height: 1000%;
+      height: 2000%;
     }
   }
 
@@ -504,6 +507,10 @@
 
   .main-page {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .pop-up {
+    display: none;
   }
 
   .heading-Des {
