--- a/CSSfiles/main.css
+++ b/CSSfiles/main.css
@@ -584,7 +584,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
-  .pop-up {
+  div .pop-up {
     display: none;
   }
 
@@ -624,10 +624,6 @@
     grid-column: 2;
     position: relative;
     margin-left: auto;
-  }
-  
-  .pop-up {
-    display: none;
   }
 
   .D-portfolio,
