--- a/CSSfiles/main.scss
+++ b/CSSfiles/main.scss
@@ -508,7 +508,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
-  .pop-up {
+  div .pop-up {
     display: none;
   }
 
