--- a/CSSfiles/main.scss
+++ b/CSSfiles/main.scss
@@ -83,7 +83,7 @@
       grid-row: 1;
       position: relative;
       display: grid;
-      background-image: url(/MY-PORTFOLIO/images/pop-background1.png);
+      background-image: url("/images/pop-background1.png");
       background-repeat: no-repeat;
       background-position: left;
       background-size: contain;
@@ -140,7 +140,7 @@
 
     .lor {
       grid-row: 2;
-      background-image: url(/MY-PORTFOLIO/images/pop-background2.png);
+      background-image: url("/images/pop-background2.png");
       background-repeat: no-repeat;
       background-position: right;
       background-size: contain;
@@ -508,7 +508,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
-  div .pop-up {
+  #pops {
     display: none;
   }
 
