--- a/CSSfiles/main.scss
+++ b/CSSfiles/main.scss
@@ -334,7 +334,7 @@
     color: white;
     font-size: 120%;
     margin: 30px;
-    size: 150%;
+    // size: 150%;
   }
 
   .github-icon {
@@ -445,7 +445,7 @@
     list-style: none;
     margin: 1% 4%;
     text-align: center;
-    text-justify: center;
+    // text-justify: center;
     margin-left: 5%;
   }
 
@@ -1021,9 +1021,9 @@
     height: 40px;
   }
 
-  img {
-    overflow: fill;
-  }
+  // img {
+  //   // overflow: fill;
+  // }
 
   h3 {
     color: white;
@@ -1067,7 +1067,7 @@
     list-style: none;
     margin: 1% 3%;
     text-align: center;
-    text-justify: center;
+    // text-justify: center;
   }
 
   .footer {
