--- a/CSSfiles/main.css
+++ b/CSSfiles/main.css
@@ -32,8 +32,8 @@
   }
 
   .the-pop-up #x-mark {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -56,8 +56,8 @@
   }
 
   .the-pop-up .snapshoot {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -78,8 +78,9 @@
   .the-pop-up .skiil {
     padding: 0 5%;
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     margin-top: 10%;
     height: 40%;
@@ -96,8 +97,8 @@
   }
 
   .the-pop-up .btncontainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -209,7 +210,8 @@
     -ms-grid-row: 1;
     grid-row: 1;
     position: relative;
-    display: -ms-grid;
+
+    /* display: -ms-grid; */
     display: grid;
     background-image: url("/images/pop-background1.png");
     background-repeat: no-repeat;
@@ -223,7 +225,8 @@
     position: relative;
     -ms-grid-column: 1;
     grid-column: 1;
-    display: -ms-grid;
+
+    /* display: -ms-grid; */
     display: grid;
     margin: 5%;
   }
@@ -242,8 +245,8 @@
   }
 
   .pop-up .pop-head .linkss {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -255,8 +258,9 @@
 
   .pop-up .pop-head .linkss .each-link {
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -331,9 +335,11 @@
 
   .languages-skills-frameworks {
     position: relative;
-    display: -ms-grid;
+
+    /* display: -ms-grid; */
     display: grid;
-    -ms-grid-columns: (1fr) [2];
+
+    /* -ms-grid-columns: (1fr) [2]; */
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
     margin-top: 50px;
@@ -384,8 +390,8 @@
   }
 
   .icon-work {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -394,8 +400,8 @@
   }
 
   .icons {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -406,7 +412,6 @@
     color: white;
     font-size: 120%;
     margin: 30px;
-    size: 150%;
   }
 
   .github-icon {
@@ -434,8 +439,8 @@
   }
 
   .work-down-arrow {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -ms-flex-item-align: center;
     align-self: center;
@@ -499,8 +504,9 @@
 
   .skil {
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     margin-top: 10%;
     height: 40%;
@@ -522,7 +528,6 @@
     list-style: none;
     margin: 1% 4%;
     text-align: center;
-    text-justify: center;
     margin-left: 5%;
   }
 
@@ -535,7 +540,7 @@
   }
 
   .work-M {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
     -ms-grid-row: 2;
     grid-row: 2;
@@ -554,12 +559,12 @@
   }
 
   .footer {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
   }
 
   .contact-M {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
     margin-top: 30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -586,8 +591,8 @@
   }
 
   form {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -658,8 +663,8 @@
   }
 
   .icons-M {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -709,8 +714,8 @@
   }
 
   .the-pop-up #x-mark {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -731,8 +736,8 @@
   }
 
   .the-pop-up .snapshoot {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -759,8 +764,9 @@
   .the-pop-up .skiil {
     padding: 0 5%;
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     margin-top: -26%;
     height: 40%;
@@ -777,8 +783,8 @@
   }
 
   .the-pop-up .btncontainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -821,7 +827,7 @@
   }
 
   .heading-Des {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
     position: relative;
     padding: 1% 10%;
@@ -870,8 +876,8 @@
   }
 
   .heading-liner {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -907,8 +913,8 @@
   }
 
   .after-about {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -924,8 +930,9 @@
 
   .languages-skills-frameworks {
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -1037,7 +1044,7 @@
   }
 
   .work-down-arrow-D {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
     width: 100%;
     -webkit-box-align: center;
@@ -1062,8 +1069,9 @@
   .wor-icon1 {
     -ms-grid-column: 1;
     grid-column: 1;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -1074,8 +1082,9 @@
   .icons {
     -ms-grid-column: 2;
     grid-column: 2;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -1092,8 +1101,9 @@
   .wor-icon2 {
     -ms-grid-column: 3;
     grid-column: 3;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -1135,7 +1145,7 @@
   }
 
   .work {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
   }
 
@@ -1144,8 +1154,8 @@
   }
 
   .work1-D {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -1167,8 +1177,8 @@
   }
 
   .work2-D {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -1207,10 +1217,6 @@
     height: 40px;
   }
 
-  img {
-    overflow: fill;
-  }
-
   h3 {
     color: white;
     font-size: 40px;
@@ -1238,8 +1244,9 @@
 
   .skill {
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     color: #dddbdb;
     font-size: 20px;
@@ -1247,11 +1254,10 @@
     list-style: none;
     margin: 1% 3%;
     text-align: center;
-    text-justify: center;
   }
 
   .footer {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
   }
 
@@ -1260,7 +1266,7 @@
   }
 
   .contact-D {
-    display: -ms-grid;
+    /* display: -ms-grid; */
     display: grid;
     margin-top: 10%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -1286,8 +1292,8 @@
   }
 
   form {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
