--- a/CSSfiles/main.scss
+++ b/CSSfiles/main.scss
@@ -16,6 +16,10 @@
 
   // the pop-up section
 
+  .the-pop-upD {
+    display: none;
+  }
+
   .the-pop-up {
     display: none;
     position: fixed;
@@ -445,7 +449,6 @@
     list-style: none;
     margin: 1% 4%;
     text-align: center;
-    // text-justify: center;
     margin-left: 5%;
   }
 
@@ -601,98 +604,111 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
-  // the pop-up section
+  // the pop-up section  Desktop
 
   .the-pop-up {
+    display: none;
+  }
+
+  .the-pop-upD {
     display: none;
     position: fixed;
     top: 0;
     left: 0;
     background-color: rgba(255, 255, 255, 0.51);
-    margin: 1% 4%;
+    margin: 0.6% 10%;
     height: 100%;
     border: 2px rgba(213, 204, 204, 0.765) solid;
     transition: all 1s ease-in-out;
     z-index: 100;
 
-    #x-mark {
+    #x-markD {
       display: flex;
       flex-direction: row;
       justify-self: flex-end;
       color: #fff;
-      margin-top: 1%;
+      margin-top: 0.5%;
       margin-right: 4%;
       font-size: x-large;
     }
 
-    .p-topic {
+    .p-topicD {
       position: relative;
       color: rgb(252, 252, 252);
       padding: 0 4%;
-      font-size: 4vh;
+      font-size: 3vh;
     }
 
-    .snapshoot {
+    .snapshootD {
       display: flex;
       flex-direction: row;
-      flex: 0.1 0.1 0;
       justify-self: center;
       width: 100%;
-      height: 50%;
-      padding: 0 4%;
+      height: 80%;
+      padding-top: 0.5%;
+      padding-left: 4%;
+      padding-right: 4%;
     }
 
-    .description {
+    .descriptionD {
       position: relative;
       color: rgba(252, 252, 252, 0.611);
       padding: 0 4%;
       text-align: center;
-      margin-top: -30%;
+      margin-top: -8.3%;
+      margin-left: 20%;
+      margin-right: 20%;
       font-size: 2vh;
     }
 
-    .skiil {
-      padding: 0 5%;
-      position: relative;
+    .skillingD {
       display: flex;
-      margin-top: -26%;
-      height: 40%;
-      margin-left: 5%;
+      flex-direction: column;
+      align-items: center;
+      color: #fff;
 
-      .vecto {
+      .skiil2 {
         position: relative;
-        color: rgba(255, 255, 255, 0.51);
-        background-color: rgba(228, 226, 226, 0.51);
-        width: 0.5%;
-        height: 40px;
-        margin: 0 6%;
+        display: flex;
+        margin-top: 0.5%;
+        height: 30%;
+        width: 44%;
+
+        .vecto2 {
+          position: relative;
+          color: rgba(255, 255, 255, 0.51);
+          background-color: rgba(228, 226, 226, 0.51);
+          width: 0.5%;
+          height: 30px;
+          margin: 0 6%;
+        }
       }
     }
 
-    .btncontainer {
+    .btncontainerD {
       display: flex;
       flex-direction: row;
       justify-items: center;
       margin-bottom: 0;
       margin-left: 30%;
-      margin-top: -22%;
+      margin-top: 0.5%;
 
-      .bt1 {
+      .bt1D {
         background-color: #9390ff;
         color: #fff;
         width: 20%;
-        margin-top: 1%;
+        margin-top: 0.5%;
         border: none;
         margin-left: 5%;
         font-size: 70%;
         height: 40px;
       }
 
-      .bt2 {
+      .bt2D {
         background-color: #9390ff;
         color: #fff;
         width: 25%;
-        margin-top: 1%;
+        margin-top: 0.5%;
         border: none;
         margin-left: 5%;
         font-size: 70%;
@@ -1021,10 +1037,6 @@
     height: 40px;
   }
 
-  // img {
-  //   // overflow: fill;
-  // }
-
   h3 {
     color: white;
     font-size: 40px;
@@ -1040,14 +1052,6 @@
     line-height: 125%;
     margin-left: 0;
   }
-
-  // .skiil {
-  //   position: relative;
-  //   display: flex;
-  //   align-items: stretch;
-  //   margin-top: 5%;
-  //   height: 30%;
-  // }
 
   .vector {
     position: relative;
@@ -1067,7 +1071,6 @@
     list-style: none;
     margin: 1% 3%;
     text-align: center;
-    // text-justify: center;
   }
 
   .footer {
