improve pop-up background image

--- a/CSSfiles/main.css
+++ b/CSSfiles/main.css
@@ -10,7 +10,7 @@
     position: relative;
     display: -ms-grid;
     display: grid;
-    background-color: #191765;
+    background-color: #161451;
     margin: 0;
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
@@ -26,7 +26,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.51);
+    background-color: rgba(255, 255, 255, 0.16);
     height: 100%;
     border: 2px rgba(213, 204, 204, 0.765) solid;
     -webkit-transition: all 1s ease-in-out;
@@ -215,7 +215,8 @@
     -ms-grid-row: 1;
     grid-row: 1;
     position: relative;
-    display: -ms-grid;
+
+    /* display: -ms-grid; */
     display: grid;
     background-image: url("/images/pop-background1.png");
     background-repeat: no-repeat;
@@ -229,7 +230,8 @@
     position: relative;
     -ms-grid-column: 1;
     grid-column: 1;
-    display: -ms-grid;
+
+    /* display: -ms-grid; */
     display: grid;
     margin: 5%;
   }
@@ -710,15 +712,15 @@
   .the-pop-upD {
     display: none;
     position: fixed;
+    height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.51);
-    margin: 0.6% 10%;
-    height: 100%;
+    z-index: 100;
     border: 2px rgba(213, 204, 204, 0.765) solid;
     -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
-    z-index: 100;
+    background-color: rgba(255, 255, 255, 0.285);
+    margin: 0.6% 10%;
   }
 
   .the-pop-upD #x-markD {
@@ -757,6 +759,35 @@
     padding-top: 0.5%;
     padding-left: 4%;
     padding-right: 4%;
+  }
+
+  .the-pop-upD .backgimage {
+    position: absolute;
+    left: -10%;
+    top: 5%;
+    z-index: -100;
+    -webkit-filter: blur(20px) brightness(90%);
+    filter: blur(20px) brightness(90%);
+  }
+
+  .the-pop-upD .backgimage img {
+    height: 50%;
+    width: 50%;
+  }
+
+  .the-pop-upD .backgimg {
+    position: absolute;
+    right: -30%;
+    top: 40%;
+    left: auto;
+    z-index: -100;
+    -webkit-filter: blur(20px) brightness(90%);
+    filter: blur(20px) brightness(90%);
+  }
+
+  .the-pop-upD .backgimg img {
+    height: 50%;
+    width: 50%;
   }
 
   .the-pop-upD .descriptionD {
@@ -849,7 +880,7 @@
   }
 
   .heading-Des {
-    /* display: -ms-grid; */
+    display: -ms-grid;
     display: grid;
     position: relative;
     padding: 1% 10%;
