--- a/CSSfiles/main.css
+++ b/CSSfiles/main.css
@@ -8,8 +8,7 @@
 @media (max-width: 768px) {
   body {
     position: relative;
-
-    /* display: -ms-grid; */
+    display: -ms-grid;
     display: grid;
     background-color: #161451;
     margin: 0;
@@ -251,9 +250,8 @@
   }
 
   .pop-up .pop-head .linkss {
-    /* display: -webkit-box; */
-
-    /* display: -ms-flexbox; */
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -346,7 +344,7 @@
     /* display: -ms-grid; */
     display: grid;
 
-    /* -ms-grid-columns: (1fr) [2]; */
+    /* -ms-grid-columns: (1fr)[2]; */
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
     margin-top: 50px;
@@ -699,8 +697,7 @@
 @media screen and (min-width: 768px) {
   body {
     position: relative;
-
-    /* display: -ms-grid; */
+    display: -ms-grid;
     display: grid;
     background-color: #191765;
     margin: 0;
@@ -1347,9 +1344,8 @@
   }
 
   form {
-    /* display: -webkit-box; */
-
-    /* display: -ms-flexbox; */
+    /* display: -webkit-box;
+    display: -ms-flexbox; */
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1437,7 +1433,8 @@
   }
 }
 
-span.errmsg {
+span.errmsg,
+span.errmsgD {
   /* display: -webkit-box;
   display: -ms-flexbox; */
   display: flex;
